[package]
name = "set_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
num-bigint = { version = "0.4.3", features = ["rand"] }

base64 = "0.21.0"
hex = "0.4.3"
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
reqwest = "0.11.16"
