[package]
name = "cryptopals-rust"
version = "0.0.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
sha2 = "0.10.6"

num-bigint-dig = { version = "0.8.2", features = ["rand", "prime"] }
base64 = "0.21.0"
hex = "0.4.3"
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
reqwest = "0.11.16"
